ISSUE-#98 Finish up styling slide panel entries
1. Add selected slide styling
2. Fix border radius overlapping
3. Adjust colors

--- a/src/components/SlidePanel/SlideEntry/SlideEntry.module.css
+++ b/src/components/SlidePanel/SlideEntry/SlideEntry.module.css
@@ -1,48 +1,44 @@
 .slideEntry
 {
-  position: relative;
+  display: flex;
+  flex-direction: row;
 
   margin-top: 5px;
   margin-bottom: 5px;
   margin-right: 5%;
 
-  border: 2px solid #969696;
-  border-radius: 2px;
+  padding: 3px 0 3px;
 
   cursor: pointer;
 
-  background: #fdf9f8;
-}
-
-.slideEntry:hover
-{
-  background: #f4f0ef;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
 
 .slideIndex
 {
+  width: 11%;
+  margin-right: 5px;
+
+  text-align: right;
+
   font-size: 0.9em;
   font-family: 'Noto Sans', sans-serif;
-  position: absolute;
-  top: 5px;
-  left: 5px;
+
+  user-select: none;
 }
 
 .slideView
 {
-  position: relative;
-  top: 50%;
-  left: 50%;
-
   width: 80%;
-  height: auto;
 
-  margin-top: 10px;
-  margin-bottom: 10px;
-  margin-left: 8px;
+  border: 2px solid #dadce0;
+  border-radius: 4px;
 
-  border: 1px solid #000000;
+  overflow: hidden;
+}
 
-  -webkit-transform: translate(-50%);
-  transform: translate(-50%);
+.slideEntry:hover .slideView
+{
+  border-color: #cccccc;
 }
